force-app/main/default/objects/Financial_Assessment__c/fields/Fuel_Cost_per_month_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost_per_month_Viability_CE__c</fullName>
    <formula>No_of_working_hours_in_a_day__c * No_working_days_in_month__c * Fuel_Avg_in_LtrHr__c  *  Cost_of_Fuel_per_litre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Cost per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>