force-app/main/default/objects/Financial_Assessment__c/fields/Gross_Receipts_TurnoverSales__c.field-meta.xml
<CustomField>
    <fullName>Gross_Receipts_TurnoverSales__c</fullName>
    <label>Gross Receipts (Turnover/Sales)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>