force-app/main/default/objects/Financial_Assessment__c/fields/Helpers_Salary__c.field-meta.xml
<CustomField>
    <fullName>Helpers_Salary__c</fullName>
    <label>Helper&apos;s Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>