force-app/main/default/objects/Financial_Assessment__c/fields/Hiring_Charges_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Charges_Per_Hour__c</fullName>
    <label>Hiring Charges Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>