force-app/main/default/objects/Financial_Assessment__c/fields/ICOR_Interest_coverage_ratio__c.field-meta.xml
<CustomField>
    <fullName>ICOR_Interest_coverage_ratio__c</fullName>
    <label>ICOR (Interest coverage ratio)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>