force-app/main/default/objects/Financial_Assessment__c/fields/Leverage__c.field-meta.xml
<CustomField>
    <fullName>Leverage__c</fullName>
    <label>Leverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>