force-app/main/default/objects/Financial_Assessment__c/fields/Life_of_new_tyres_in_Km__c.field-meta.xml
<CustomField>
    <fullName>Life_of_new_tyres_in_Km__c</fullName>
    <label>Life of new tyres in Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>