force-app/main/default/objects/Financial_Assessment__c/fields/Long_Term_Debt__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Debt__c</fullName>
    <label>Long Term Debt</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>