force-app/main/default/objects/Financial_Assessment__c/fields/Long_Term_Debt_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Debt_Net_Worth__c</fullName>
    <label>Long Term Debt/Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>