force-app/main/default/objects/Financial_Assessment__c/fields/Long_term_leverage_Debt_Equity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Long_term_leverage_Debt_Equity_Ratio__c</fullName>
    <label>Long term leverage/Debt Equity Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>