force-app/main/default/objects/Financial_Assessment__c/fields/Misc_Exps__c.field-meta.xml
<CustomField>
    <fullName>Misc_Exps__c</fullName>
    <label>Misc Exps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>