force-app/main/default/objects/Financial_Assessment__c/fields/Monthly_revenue_in_Rs_Lacs_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>Monthly_revenue_in_Rs_Lacs_Viability_CE__c</fullName>
    <formula>Hiring_Charges_Per_Hour__c *  Total_Hours_Operated_in_a_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly revenue in Rs Lacs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>