force-app/main/default/objects/Financial_Assessment__c/fields/Monthly_revenue_in_Rs_Lacs_Viability_CV__c.field-meta.xml
<CustomField>
    <fullName>Monthly_revenue_in_Rs_Lacs_Viability_CV__c</fullName>
    <formula>Distance_in_KM__c * No_of_trips_per_month__c  *   Avg_Load_per_trip__c * Rate_Tonne_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly revenue in Rs Lacs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>