force-app/main/default/objects/Financial_Assessment__c/fields/Monthly_Revenue_in_Rs_Lakh__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_in_Rs_Lakh__c</fullName>
    <formula>No_of_trips_per_month__c  *  Distance_in_KM__c  *  Avg_Load_per_trip__c  *  Rate_per_ton_per_km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Revenue in Rs. Lakh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>