force-app/main/default/objects/Financial_Assessment__c/fields/Monthly_Running_In_KM__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Running_In_KM__c</fullName>
    <formula>No_of_trips_per_month__c * Distance_in_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Running In KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>