force-app/main/default/objects/Financial_Assessment__c/fields/Net_Profit_percent__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_percent__c</fullName>
    <label>Net Profit	%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>