force-app/main/default/objects/Financial_Assessment__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <label>Net Worth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>