force-app/main/default/objects/Financial_Assessment__c/fields/No_of_tyres__c.field-meta.xml
<CustomField>
    <fullName>No_of_tyres__c</fullName>
    <label>No. of tyres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>