force-app/main/default/objects/Financial_Assessment__c/fields/No_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>No_of_vehicles__c</fullName>
    <label>No. of vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>