force-app/main/default/objects/Financial_Assessment__c/fields/No_of_working_hours_in_a_day__c.field-meta.xml
<CustomField>
    <fullName>No_of_working_hours_in_a_day__c</fullName>
    <label>No. of working hours in a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>