force-app/main/default/objects/Financial_Assessment__c/fields/NW__c.field-meta.xml
<CustomField>
    <fullName>NW__c</fullName>
    <label>NW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>