force-app/main/default/objects/Financial_Assessment__c/fields/Operators_Salary__c.field-meta.xml
<CustomField>
    <fullName>Operators_Salary__c</fullName>
    <label>Operator&apos;s Salary</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>