force-app/main/default/objects/Financial_Assessment__c/fields/Other_Income_not_relevant_to_key_buss__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_not_relevant_to_key_buss__c</fullName>
    <label>Other Income not relevant to key buss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>