force-app/main/default/objects/Financial_Assessment__c/fields/PBDIT__c.field-meta.xml
<CustomField>
    <fullName>PBDIT__c</fullName>
    <label>PBDIT</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>