force-app/main/default/objects/Financial_Assessment__c/fields/PBDIT_Profit_before_depricaition__c.field-meta.xml
<CustomField>
    <fullName>PBDIT_Profit_before_depricaition__c</fullName>
    <label>PBDIT (Profit before depricaition)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>