force-app/main/default/objects/Financial_Assessment__c/fields/Permit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Permit_Cost__c</fullName>
    <label>Permit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>