force-app/main/default/objects/Financial_Assessment__c/fields/PFFR__c.field-meta.xml
<CustomField>
    <fullName>PFFR__c</fullName>
    <formula>(Free_Fleet__c +  Free_Fleet_Instalment_or_principle_expos__c + Deemed_Free_Calculation__c )/( Existing_Fleet__c + Proposed_Fleet__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFFR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>