force-app/main/default/objects/Financial_Assessment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Financial Assessment</relationshipLabel>
    <relationshipName>Financial_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>