force-app/main/default/objects/Financial_Assessment__c/fields/Proposed_Emi__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Emi__c</fullName>
    <label>Proposed Emi</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>