force-app/main/default/objects/Financial_Assessment__c/fields/Proposed_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fleet__c</fullName>
    <label>Proposed Fleet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>