force-app/main/default/objects/Financial_Assessment__c/fields/Proposed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Loan__c</fullName>
    <label>Proposed Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>