force-app/main/default/objects/Financial_Assessment__c/fields/Rate_Per_Ton_Per_KMs__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Ton_Per_KMs__c</fullName>
    <label>Rate / Tonne / KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>