force-app/main/default/objects/Financial_Assessment__c/fields/Rate_Tonne_KM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Tonne_KM__c</fullName>
    <formula>Rate_Per_Ton__c / Distance_in_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate / Tonne / KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>