force-app/main/default/objects/Financial_Assessment__c/fields/Reserves_surplus__c.field-meta.xml
<CustomField>
    <fullName>Reserves_surplus__c</fullName>
    <label>Reserves &amp; surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>