force-app/main/default/objects/Financial_Assessment__c/fields/Secured_loans_excluding_Bank_ODCC__c.field-meta.xml
<CustomField>
    <fullName>Secured_loans_excluding_Bank_ODCC__c</fullName>
    <label>Secured loans excluding Bank OD/CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>