force-app/main/default/objects/Financial_Assessment__c/fields/Sundry_Creditors_in_above__c.field-meta.xml
<CustomField>
    <fullName>Sundry_Creditors_in_above__c</fullName>
    <label>Sundry Creditors in above</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>