force-app/main/default/objects/Financial_Assessment__c/fields/Sundry_Debtors_less_than_6_months__c.field-meta.xml
<CustomField>
    <fullName>Sundry_Debtors_less_than_6_months__c</fullName>
    <label>Sundry Debtors(&lt; 6 months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>