force-app/main/default/objects/Financial_Assessment__c/fields/Tax_Expense__c.field-meta.xml
<CustomField>
    <fullName>Tax_Expense__c</fullName>
    <label>Tax Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>