force-app/main/default/objects/Financial_Assessment__c/fields/Taxes_Permit__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Permit__c</fullName>
    <label>Taxes &amp; Permit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>