force-app/main/default/objects/Financial_Assessment__c/fields/TOL_TNW__c.field-meta.xml
<CustomField>
    <fullName>TOL_TNW__c</fullName>
    <label>TOL / TNW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>