force-app/main/default/objects/Financial_Assessment__c/fields/TOL_TNW_should_be_4__c.field-meta.xml
<CustomField>
    <fullName>TOL_TNW_should_be_4__c</fullName>
    <label>TOL / TNW, should be &lt;/=4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>