force-app/main/default/objects/Financial_Assessment__c/fields/Total_Buy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Cost__c</fullName>
    <formula>(Buy_No_of_trips_per_month__c * Buy_Distance_in_KM__c * Buy_Avg_Load_per_trip__c * Buy_Rate_per_ton_per_km__c)-
((( Buy_No_of_trips_per_month__c * Buy_Distance_in_KM__c )*( Buy_Cost_of_Fuel_per_litre__c / Buy_Fuel_Avg_in_LtrHr__c))+ Buy_Tyres_Cost__c+ Buy_CleanerOperator_Salary__c + Buy_Drivers_Salary__c + Buy_Taxes_Permit__c +  Buy_Maintenance_Cost__c + Buy_Misc_Exps__c + Buy_Proposed_Emi__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>