force-app/main/default/objects/Financial_Assessment__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>((No_of_trips_per_month__c * Distance_in_KM__c )* ( Cost_of_Fuel_per_litre__c / Fuel_Avg_in_LtrHr__c ))
+
(ROUND(( No_of_trips_per_month__c  *  Distance_in_KM__c  *  Cost_of_1_tyre__c  *  No_of_tyres__c )/ Life_of_new_tyres_in_Km__c ,0))
+
+ Drivers_Salary__c + CleanerOperator_Salary__c + Taxes_Permit__c + Maintenance_Cost__c +Misc_Exps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>