force-app/main/default/objects/Financial_Assessment__c/fields/Total_Expenses_CE__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_CE__c</fullName>
    <formula>Drivers_Salary__c +  CleanerOperator_Salary__c + Taxes_Permit__c + Maintenance_Cost__c + Misc_Exps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>