force-app/main/default/objects/Financial_Assessment__c/fields/Total_Expenses_Viability_CE__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Viability_CE__c</fullName>
    <formula>Fuel_Cost_per_month_Viability_CE__c  +  Consumables_Cost__c + CleanerOperator_Salary__c +  Helpers_Salary__c +  Maintenance_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>