force-app/main/default/objects/Financial_Assessment__c/fields/Total_Expenses_Viability_CV__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Viability_CV__c</fullName>
    <formula>Fuel_Cost_c_h_g__c + Tyre_Cost_I_J_c_k__c  +  CleanerOperator_Salary__c +  Drivers_Salary__c + Permit_Cost__c + Tax_Expense__c + Misc_Exps__c + Maintenance_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>