force-app/main/default/objects/Financial_Assessment__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <formula>Gross_Receipts_TurnoverSales__c +  Other_Income_not_relevant_to_key_buss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>