force-app/main/default/objects/Financial_Assessment__c/fields/Total_Income_financials__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_financials__c</fullName>
    <label>Total Income</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>