force-app/main/default/objects/Financial_Assessment__c/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <label>Total Liabilities</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>