force-app/main/default/objects/Financial_Assessment__c/fields/Total_long_term_liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_long_term_liabilities__c</fullName>
    <label>Total long term liabilities</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>