force-app/main/default/objects/Financial_Assessment__c/fields/Total_Networth__c.field-meta.xml
<CustomField>
    <fullName>Total_Networth__c</fullName>
    <label>Total Networth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>