force-app/main/default/objects/Financial_Assessment__c/fields/Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent__c</fullName>
    <formula>No_of_working_hours_in_a_day__c * No_working_days_in_month__c * Charge_per_hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>