force-app/main/default/objects/Financial_Assessment__c/fields/Total_Sundry_Debtors__c.field-meta.xml
<CustomField>
    <fullName>Total_Sundry_Debtors__c</fullName>
    <label>Total Sundry Debtors</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>