force-app/main/default/objects/Financial_Assessment__c/fields/Tyre_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Cost__c</fullName>
    <formula>ROUND(( No_of_trips_per_month__c  *  Distance_in_KM__c  *  Cost_of_1_tyre__c  *  No_of_tyres__c )/ Life_of_new_tyres_in_Km__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>