force-app/main/default/objects/Financial_Assessment__c/fields/Tyre_Cost_I_J_c_k__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Cost_I_J_c_k__c</fullName>
    <formula>(No_of_tyres__c * Cost_of_1_tyre__c  *  Monthly_Running_In_KM__c )/Life_of_new_tyres_in_Km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Cost (I*J*c) / (k)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>