force-app/main/default/objects/Financial_Assessment__c/fields/Unsecured_loans_from_Outsiders__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_loans_from_Outsiders__c</fullName>
    <label>Unsecured loans from Outsiders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>