force-app/main/default/objects/Financial_Assessment__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Financial Assessment</relationshipLabel>
    <relationshipName>Financial_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>