force-app/main/default/objects/Financial_Assessment__c/fields/Vehicle_plied_on_which_ROUTE_mostly__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_plied_on_which_ROUTE_mostly__c</fullName>
    <label>Vehicle plied on which ROUTE mostly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>