force-app/main/default/objects/Financial_Assessment__c/fields/Viability_for_which_Vehicle_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Viability_for_which_Vehicle_Make_Model__c</fullName>
    <label>Viability for which Vehicle Make &amp; Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>