force-app/main/default/objects/Financial_Assessment__c/fields/Year_on_Year_Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Year_on_Year_Net_Profit__c</fullName>
    <label>Year on Year Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>