force-app/main/default/objects/Financial_Assessment__c/fields/Year_on_Year_Profit_should_be_Positive__c.field-meta.xml
<CustomField>
    <fullName>Year_on_Year_Profit_should_be_Positive__c</fullName>
    <label>Year on Year Profit must be Positive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>