force-app/main/default/objects/Financial_Assessment__c/fields/Year_on_Year_Turnover_not_less_than_15__c.field-meta.xml
<CustomField>
    <fullName>Year_on_Year_Turnover_not_less_than_15__c</fullName>
    <label>Year on Year Turnover not less than 15%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>