force-app/main/default/objects/Financial_Assessment__c/recordTypes/FFR.recordType-meta.xml
<RecordType>
    <fullName>FFR</fullName>
    <active>true</active>
    <label>FFR</label>
</RecordType>