force-app/main/default/objects/Financial_Assessment__c/recordTypes/Financials.recordType-meta.xml
<RecordType>
    <fullName>Financials</fullName>
    <active>true</active>
    <label>Financials</label>
</RecordType>