force-app/main/default/objects/Financial_Assessment__c/recordTypes/Hire_and_Buy_CE.recordType-meta.xml
<RecordType>
    <fullName>Hire_and_Buy_CE</fullName>
    <active>true</active>
    <label>Hire and Buy CE</label>
</RecordType>