force-app/main/default/objects/Financial_Assessment__c/recordTypes/Hire_and_Buy_CV.recordType-meta.xml
<RecordType>
    <fullName>Hire_and_Buy_CV</fullName>
    <active>true</active>
    <label>Hire and Buy CV</label>
</RecordType>