force-app/main/default/objects/Financial_Assessment__c/recordTypes/Viability_CE.recordType-meta.xml
<RecordType>
    <fullName>Viability_CE</fullName>
    <active>true</active>
    <label>Viability - CE</label>
</RecordType>