force-app/main/default/objects/Financial_Assessment__c/recordTypes/Viability_CV.recordType-meta.xml
<RecordType>
    <fullName>Viability_CV</fullName>
    <active>true</active>
    <label>Viability - CV</label>
</RecordType>