force-app/main/default/objects/Financial_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Loan_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>